01/11/2023 - Carlos - Introducida toolbar a la activity_piloto_details.xml y retoques de diseño

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:exported="false" />
         <activity
             android:name=".PilotoDetails"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NanoFormulaDetails"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
