--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
