--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,6 @@ android {
     }
 }
 
-
-
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -48,6 +46,12 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    implementation ('com.google.apis:google-api-services-youtube:v3-rev222-1.25.0') {
+        exclude group: 'com.google.guava', module: 'guava'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+        exclude group: 'org.apache.httpcomponents', module: 'httpcore'
+    }
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
