--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,11 @@
             android:name=".CarreraDetails"
             android:exported="false"
             android:label="@string/title_activity_carrera_details"
-            android:theme="@style/Theme.NanoFormula.NoActionBar" />
+            android:theme="@style/Theme.NanoFormulaDetails" />
         <activity
             android:name=".EscuderiaDetails"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NanoFormulaDetails"/>
         <activity
             android:name=".PilotoDetails"
             android:exported="false"
